# autodask

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: python-app.yml  python-package.yml
autodask/: __init__.py  main.py
autodask/advanced_usage/: index.html
autodask/basic_usage/: index.html
autodask/blender/: index.html
autodask/core/: bco_optimization.py  blender.py  data.py  ensembling.py  log.py  preprocessor.py  train.py  trainer.py  tuner.py
autodask/core/task/: ensemble.py  train.py
autodask/core/utils/: log.py
autodask/main/: index.html
autodask/models/: default_parameters.json  model_parameters.json  model_repository.py  search_parameters.json
autodask/preprocessor/: index.html
autodask/repository/: default_parameters.json  index.html  metric_repository.py  model_repository.py  search_parameters.json
autodask/trainer/: index.html
autodask/tuner/: index.html
autodask/utils/: cross_val.py  log.py  regular_conditions.py  regular_functions.py
docs/: autodask.html  index.html  index.md  search.js
docs/autodask/: advanced_usage.md  basic_usage.md  blender.md  core.html  main.html  main.md  repository.html  repository.md  tuner.md  utils.html
docs/autodask/core/: blender.html  preprocessor.html  trainer.html  tuner.html
docs/autodask/repository/: metric_repository.html  model_repository.html
docs/autodask/utils/: log.html  regular_functions.html
search/: search_index.json
site/: index.html
site/autodask/basic_usage/: index.html
site/autodask/core/: index.html
site/autodask/main/: index.html
site/autodask/repository/: index.html
site/search/: search_index.json
tests/: conftest.py
tests/integration/: test_adsk.py
tests/unit/: test_blender.py
