[tool.poetry]
name = "autodask"
version = "0.1.0"
description = "AutoML Based on Dask"
authors = ["Dmitry Gilemkhanov <dima.rize@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
dask = { version = ">=2023.5.0,<2026.0.0", extras = ["complete"] }
dask-ml = ">=2024.4.4,<2026.0.0"
lightgbm = ">=4.6.0,<5.0.0"
xgboost = ">=1.4.0"
catboost = ">=1.2.8,<2.0.0"
numpy = ">=1.26"
scipy = ">=1.13.1,<2.0.0"
scikit-learn = "~1.6.1"
pandas = ">=2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"